allow overflow scroll (was preventing scroll on mobile)

--- a/checkmate/src/index.css
+++ b/checkmate/src/index.css
@@ -1,6 +1,4 @@
-body {
-  overflow: hidden;
-}
+
 body {
   margin: 0;
   font-family: 'Itim', -apple-system,'Roboto', sans-serif;
